<resources>
    <string name="app_name">GameQ</string>
    <string name="gameq">GameQ!</string>
    <string name="logo">logo</string>
    <string name="log_in">Log In</string>
    <string name="user">Username</string>
    <string name="password">Password</string>
    <string name="signUp">No account? Sign Up!</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm password</string>
    <string name="valid_email">Valid Username</string>
    <string name="title_activity_drawer">Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_TempName">Temp Name</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="addGame">Add a game</string>
    <string name="Completed">Game Completed</string>
    <string name="toComplete">Game to Complete</string>
    <string name="logOut">LogOut</string>
    <string name="score">Score</string>
    <string name="to_completeButton">To Complete</string>
    <string name="completedButton">Completed</string>
    <string name="gameName">Game\'s Name</string>
    <string name="ok">OK</string>
    <string name="gameExist">The game\'s name already exist in your list.</string>
    <string name="ScoreError">The score must be between 0 and 100.</string>
    <string name="MaxLength">The name of the game must not be above 80 characters. Currently: </string>
    <string name="BlankName">The name field of the game is empty.</string>
    <string name="BlankScore">The score field of the game is empty.</string>
    <string name="GameEdited">The game has been edited.</string>
    <string name="NoUserConnected">There\'s no user connected. Back to the login screen.</string>
    <string name="SeeYa">See you next time</string>
    <string name="Hello">Hello</string>
    <string name="OneCharacterEmpty">At least one of the fields is empty.</string>
    <string name="Error">Error</string>
    <string name="SelectedDontExist">The selected game does not exist.</string>
    <string name="NoMatch">The username and the password do not match.</string>
    <string name="UsernameExist">The username already exist.</string>
    <string name="FieldSpace">The fields can not contain spaces.</string>
    <string name="CharaLimit20">The character limit of the fields is 20.</string>
    <string name="PleaseWait">Please wait my dude!</string>
    <string name="messOp">Sending data...</string>
</resources>
