<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/ToComplete"
        android:orderInCategory="100"
        android:title="@string/toComplete"
        app:showAsAction="never" />
    <item
        android:id="@+id/Completed"
        android:orderInCategory="100"
        android:title="@string/Completed"
        app:showAsAction="never" />
    <item
        android:id="@+id/AddGame"
        android:orderInCategory="100"
        android:title="@string/addGame"
        app:showAsAction="never" />
    <item
        android:id="@+id/LogOut"
        android:orderInCategory="100"
        android:title="@string/logOut"
        app:showAsAction="never" />
</menu>
