<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/DrawerAdd"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".GUI.AddGame"
        android:gravity="center_horizontal">


        <EditText
            android:id="@+id/gameNameAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:ems="10"
            android:hint="@string/gameName"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="50dp">
            <Button
                android:id="@+id/buttonComplete"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:text="@string/completedButton"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gameName" />

            <Button
                android:id="@+id/buttonToComplete"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:textColor="@color/colorWhite"
                android:background="@color/colorPrimaryDark"
                android:text="@string/to_completeButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gameName" />


        </LinearLayout>
        <EditText
            android:id="@+id/ScoreAdd"
            android:layout_marginTop="50dp"
            android:hint="@string/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:visibility="invisible"
            android:inputType="number"
            app:layout_constraintTop_toBottomOf="@+id/buttonComplete" />
        <Button
            android:id="@+id/buttonOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/ok"
            app:layout_constraintTop_toBottomOf="@+id/gameName" />

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_drawer"
        app:menu="@menu/menu_drawer"/>
</androidx.drawerlayout.widget.DrawerLayout>
